# slack-content-performance-data-bot

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  Dockerfile.simple  Dockerfile.socket  README-DEPLOYMENT.md  README-simple.md  README.md  SLACK-SETUP.md  SOCKET-MODE-MIGRATION.md  docker-compose-simple.yml  docker-compose.prod.yml  docker-compose.yml  env.prod.example  pyproject.toml  requirements-dev.txt  requirements-simple.txt  requirements.txt  run-dev.py  run-simple.py  slack-app-manifest-fixed.json  slack-app-manifest.json  validate-simple.py
.aws/: task-definition.json
.claude/: settings.local.json
.github/workflows/: aws-deploy.yml  deploy.yml
aws/: task-definition.json  task-role-policy.json
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: deploy-aws.sh  deploy-prod.sh  deploy.sh  start-dev.sh
src/: __init__.py  config.py  main.py
src/agents/: function_agent.py  langgraph_mcp_agent.py  langgraph_react_agent.py  simple_agent.py  state.py  workflow.py
src/agents/mappers/: intent_to_mcp.py
src/agents/nodes/: data_retrieval.py  query_planning.py  query_understanding.py  results_formatting.py
src/agents/prompts/: query_parser.py
src/api/: health.py  middleware.py  slack_webhooks.py
src/database/: connection.py
src/services/: csv_service.py  mcp_client.py  queue.py  redis_client.py  slack_client.py  slack_socket_client.py  slack_socket_simple.py
src/utils/: logging.py  slack_validator.py
src/workers/: agent_processor.py  simple_socket_worker.py  slack_processor.py  socket_mode_worker.py
tests/: conftest.py
